implemented boardgame catalogue api
